--- a/index.html
+++ b/index.html
@@ -19,20 +19,17 @@
     <p class="lead">A simple calendar app for scheduling your work day</p>
     <p id="currentDay" class="lead"></p>
   </header>
-  <div class="container justify-contents-center" id="calendar">
+  <div class="container" id="calendar">
     <!-- Timeblocks go here -->
 
-    <div class="row justify-contents-center">
-      <div class="col-2 hour time-block">9AM</div>
-      <div class="col">
-        <textarea class="description" data-hour="9"></textarea>
-      </div>
-      <div class="col">
-        <button class="btn SaveBtn" data-hour="9"><i class="fas fa-lock fa-xs"></i></button>
-      </div>
+    <div class="row time-block">
+      <div class="col-md-1 hour">9AM</div>
+        <textarea class="col-md-10 description" data-hour="9"></textarea>
+      
+        <button class="col-md-1 btn saveBtn" data-hour="9"><i class="fas fa-lock fa-xs"></i></button>
     </div>
 
-    <div class="row justify-contents-center">
+    <div class="row justify-content-center">
       <div class="col-2 hour time-block">10AM</div>
       <div class="col">
         <textarea class="description" data-hour="10"></textarea>
@@ -42,7 +39,7 @@
       </div>
     </div>
 
-    <div class="row justify-contents-center">
+    <div class="row justify-content-center">
       <div class="col-2 hour time-block">11AM</div>
       <div class="col">
         <textarea class="description" data-hour="11"></textarea>
@@ -52,7 +49,7 @@
       </div>
     </div>
 
-    <div class="row justify-contents-center">
+    <div class="row justify-content-center">
       <div class="col-2 hour time-block">12PM</div>
       <div class="col">
         <textarea class="description" data-hour="12"></textarea>
@@ -62,54 +59,54 @@
       </div>
     </div>
 
-    <div class="row justify-contents-center">
+    <div class="row justify-content-center">
       <div class="col-2 hour time-block">1PM</div>
       <div class="col">
-        <textarea class="description" data-hour="1"></textarea>
+        <textarea class="description" data-hour="13"></textarea>
       </div>
       <div class="col">
-        <button class="btn saveBtn" data-hour="1"></button>
+        <button class="btn saveBtn" data-hour="13"></button>
       </div>
     </div>
 
-    <div class="row justify-contents-center">
+    <div class="row justify-content-center">
       <div class="col-2 hour time-block">2PM</div>
       <div class="col">
-        <textarea class="description" data-hour="2"></textarea>
+        <textarea class="description" data-hour="14"></textarea>
       </div>
       <div class="col">
-        <button class="btn saveBtn" data-hour="2"></button>
+        <button class="btn saveBtn" data-hour="14"></button>
       </div>
     </div>
 
-    <div class="row justify-contents-center">
+    <div class="row justify-content-center">
       <div class="col-2 hour time-block">3PM</div>
       <div class="col">
-        <textarea class="description" data-hour="3"></textarea>
+        <textarea class="description" data-hour="15"></textarea>
       </div>
       <div class="col">
-        <button class="btn saveBtn" data-hour="3"></button>
+        <button class="btn saveBtn" data-hour="15"></button>
       </div>
     </div>
 
 
-    <div class="row justify-contents-center">
+    <div class="row justify-content-center">
       <div class="col-2 hour time-block">4PM</div>
       <div class="col">
-        <textarea class="description" data-hour="4"></textarea>
+        <textarea class="description" data-hour="16"></textarea>
       </div>
       <div class="col">
-        <button class="btn saveBtn" data-hour="4"></button>
+        <button class="btn saveBtn" data-hour="16"></button>
       </div>
     </div>
 
-    <div class="row justify-contents-center">
+    <div class="row justify-content-center">
       <div class="col-2 hour time-block">5PM</div>
       <div class="col">
-        <textarea class="description" data-hour="5"></textarea>
+        <textarea class="description" data-hour="17"></textarea>
       </div>
       <div class="col">
-        <button class="btn saveBtn" data-hour="5"></button>
+        <button class="btn saveBtn" data-hour="17"></button>
       </div>
     </div>
 
